[gd_scene load_steps=4 format=3 uid="uid://b07o6c64xjn6"]

[ext_resource type="Script" path="res://prog_58b.gd" id="1_er3in"]
[ext_resource type="Theme" uid="uid://b3vw2x20nvw4b" path="res://largebtntext.tres" id="2_pyul4"]
[ext_resource type="LabelSettings" uid="uid://dsw2irsupulfm" path="res://biglabel.tres" id="3_8osbm"]

[node name="prog_58b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_er3in")

[node name="txtA" type="LineEdit" parent="."]
layout_mode = 0
offset_right = 297.0
offset_bottom = 97.0
theme = ExtResource("2_pyul4")

[node name="txtB" type="LineEdit" parent="."]
layout_mode = 0
offset_top = 127.0
offset_right = 297.0
offset_bottom = 224.0
theme = ExtResource("2_pyul4")

[node name="txtC" type="LineEdit" parent="."]
layout_mode = 0
offset_top = 248.0
offset_right = 297.0
offset_bottom = 345.0
theme = ExtResource("2_pyul4")

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 618.0
offset_right = 1152.0
offset_bottom = 360.0
label_settings = ExtResource("3_8osbm")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_top = 552.0
offset_right = 328.0
offset_bottom = 649.0
theme = ExtResource("2_pyul4")
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 362.0
offset_top = 552.0
offset_right = 690.0
offset_bottom = 649.0
theme = ExtResource("2_pyul4")
text = "Clear"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
